# spotykach-vst

./: .gitignore  README.md
au/: spotykach.trak
au/spotykach_au/: Spotykach.cpp  Spotykach.exp  Spotykach.h  Spotykach.r  SpotykachVersion.h  spotykach_au-Info.plist  spotykach_au-Prefix.pch
au/spotykach_au.xcodeproj/: project.pbxproj
au/spotykach_au.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
au/spotykach_au.xcodeproj/xcshareddata/xcschemes/: spotykach_au.xcscheme  (+1 more)
au/spotykach_au/core/: Envelope.cpp  Envelope.h  Generator.cpp  Generator.h  ParameterIdentifiers.h  Slice.cpp  Slice.h  Source.cpp  Source.h  Trigger.cpp  Trigger.h
au/spotykach_au_view/: SpotykachView.h  SpotykachView.m  SpotykachView.xib  SpotykachViewFactory.h  SpotykachViewFactory.m  spotykach_au_view-Info.plist
core/spotycach_core_test/: GeneratorTest.cpp  LFOTest.cpp  SourceTest.cpp  TestGenerator.h  TestLFO.h  TestSource.h  TriggerTest.cpp  main.cpp
core/spotykach_core/: Engine.cpp  Engine.h  Envelope.cpp  Generator.cpp  Generator.h  IGenerator.h  ILFO.h  ISliceBuffer.h  ISource.h  ITrigger.h  LFO.cpp  LFO.h  Parameters.h  Slice.cpp  Slice.h  SliceBuffer.cpp  SliceBuffer.h  Source.cpp  Source.h  Spotykach.cpp  Spotykach.h  Trigger.cpp  Trigger.h
core/spotykach_core.xcodeproj/: project.pbxproj
spotykach.xcworkspace/: contents.xcworkspacedata
vst/: CMakeLists.txt
vst/resource/: Info.plist  editor.uidesc
vst/source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h  vstparams.h
vst/spotykach_vst.xcodeproj/: project.pbxproj
vst/spotykach_vst.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  VST3Inspector.xcscheme  ZERO_CHECK.xcscheme  base.xcscheme  cmake_VST_modules.xcscheme  cmake_modules.xcscheme  pluginterfaces.xcscheme  sdk.xcscheme  sdk_common.xcscheme  sdk_hosting.xcscheme  spotykach_vst.xcscheme  validator.xcscheme  vstgui.xcscheme  vstgui_standalone.xcscheme  vstgui_support.xcscheme  vstgui_uidescription.xcscheme
(+2 files in other folders)
